--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </h1>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: Helvetica Neue,Helvetica,Arial,sans-serif;
       background-color: #ffffff;
     }
     h1 {
